--- a/final/final-presentation.tex
+++ b/final/final-presentation.tex
@@ -97,15 +97,13 @@
 \section{Conclusion}
 
 \begin{frame}
-\frametitle{Conclusion}
+\frametitle{Conclusion \& Future Scope}
 \begin{itemize}
-    \item It is possible to create websites, blogs, videos, apps with open source materials
-    \item The methods and approaches in this thesis serves the public, specifically the next generation of scientist
-    \item Web-based toolkits serve the user community.
-    \item Agencies are actively pursuing similar websites (NASA, NOAA, Argo France). This thesis applies to them.
-    
+    \item Visualization of huge datasets in a user friendly manner is possible in mobile applications.
+    \item EyesOnCrops: Live on AppStore soon.
+    \item This thesis applies to Farmers, Insurance companies, Teachers, Scientists.
+    \item Future scope would be to include analysis in the application.
+    \item One more thing in the future can be done is to make this app more generic by having it to take and visualize + analyze any kind of data like sea surface temperature, pressure, weather or any.
 \end{itemize}
 \end{frame}
-
-
 \end{document}
