--- a/final/iOS.tex
+++ b/final/iOS.tex
@@ -395,8 +395,39 @@ EyesOnCrops mainly consists of following:
 \end{itemize}
 \end{frame}
 
-
 \begin{frame}
 \frametitle{Analysis: Data downloading}
+ \begin{figure}[H]
+            \centering
+            \includegraphics[width=0.95\linewidth]{final/figures/email_feature.png}
+            \caption{Analysis: Exporting the data process}
+    \end{figure}
+\end{frame}
 
+\begin{frame}
+\frametitle{Analysis: Mean \& Standard deviation}
+\begin{columns}
+\column{0.5\textwidth}
+\begin{figure}
+    \centering
+    \begin{minipage}{.75\columnwidth}
+    \includegraphics[width=1.5\linewidth]{final/figures/US_mean.png}
+    \caption{United States Mean throughout the years}
+    \end{minipage}
+\end{figure}
+
+\column{0.55\textwidth}
+\begin{figure}
+    \centering
+    \begin{minipage}{.75\columnwidth}
+    \includegraphics[width=1.25\linewidth]{final/figures/US_SD.png}
+    \caption{United States Standard deviation}
+    \end{minipage}
+\end{figure}
+\end{columns}
+\end{frame}
+
+\begin{frame}
+\frametitle{Analysis: Singular value decomposition}
+ 
 \end{frame}
